fix spacing for .underline

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -508,8 +508,9 @@ padding-top: 2px;
 
 .underline {
   border-bottom: 2px solid white;
-  padding-top: 5px;
-  margin-top: 5px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  margin-top: 20px;
 }
 
 .overline {
